--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
 
   <!-- By default the target is set to 10.TE.AM.2 -->
   <!--<property name="target" value="10.26.35.20"/> -->
-  <property name="target" value="roborio-2635-frc.lan"/>
+  <!--<property name="target" value="roborio-2635-frc.lan"/>-->
 
 
 
